@@ -11,6 +11,9 @@ Version 2.2.0
     mcMMO's config system has been rewritten
     mcMMO will now warn you in the console if it thinks you are running incompatible server software
     Parties no longer have a cap, you can level them forever for bragging rights
+    You can now specify multiple repair-items for an item (such as specifying that a wooden sword can be repaired by all types of planks)
+    Simplified the config entries for Repairables in the Repair config
+    Repairables in the repair config now use their internal registry key names instead of Bukkit material names
     Optimizations were made for many anti-exploit behaviours
     Acrobatic's Dodge will no longer reward XP for a few seconds after a TP
     Roll will not give XP for a few seconds after a TP
